Replaced lorem ipsum text. Fixed recipies page layout issues. Finished browser testing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,6 @@ body a:hover{
     border: 1px solid #000;
     border-radius: 4px;
     box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 60px;
 }
 
 .recipe-title{
@@ -462,7 +461,7 @@ body a:hover{
         background-repeat: no-repeat;
     }
     .recipe-section{
-        margin-top: 20px;
+        margin: 20px 0px 60px 0px;
     }
     .social-contact li{
         margin: 10px;
@@ -501,9 +500,6 @@ body a:hover{
         height: 300px;
         background-size: contain;
         background-repeat: no-repeat;
-    }
-    .recipe-section{
-        margin: 60px 0px 20px 0px;
     }
     .reference-logo-1,.reference-logo-2{
         width: 70px;
